--- a/SoundCloudUI-Info.plist
+++ b/SoundCloudUI-Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<string>1.0.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2011 nxtbgthng. All rights reserved.</string>
+	<string>Copyright © 2012 SoundCloud Ltd. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
